# code-kata

./: .gitignore  Cargo.toml  README.md
a-diversion/: Cargo.toml  criterion.toml
a-diversion/benches/: calc_implementations.rs
a-diversion/src/: lib.rs  main.rs
anagrams/src/: main.rs
back-to-the-checkout/: Cargo.toml
back-to-the-checkout/src/: main.rs
business-rules/: Cargo.toml
business-rules/src/: all_items.json  all_purchases.json  all_rules.json  interaction.rs  lib.rs  main.rs  printing.rs
business-rules/src/data/: io.rs  mod.rs  types.rs
counting-code-lines/: Cargo.toml
counting-code-lines/src/: code_analysis.rs  main.rs
counting-code-lines/src/test_examples/: Dave.java  Hello.java
data-munging/: Cargo.toml
data-munging/src/: main.rs
how-big-how-fast/: Cargo.toml
how-big-how-fast/src/: lib.rs
karate-chop/: Cargo.toml
karate-chop/src/: main.rs
sorting-it-out/: Cargo.toml
sorting-it-out/src/: lib.rs  sorting_balls.rs  sorting_characters.rs
supermarket-pricing/: Cargo.toml
supermarket-pricing/src/: main.rs
transitive-dependencies/: Cargo.toml
transitive-dependencies/src/: lib.rs  sample_1_expectation.txt  sample_1_input.txt  sample_2_expectation.txt  sample_2_input.txt
triagrams/: 1984_chapter1.txt  Cargo.toml
triagrams/src/: main.rs
word-chains/: Cargo.toml
word-chains/src/: main.rs  sample_cat_into_dog.txt  wordlist.txt
